@@ -1,10 +1,12 @@
 """Regresssion tests for urllib"""
 
 import urllib
+import httplib
 import unittest
 from test import test_support
 import os
 import mimetools
+import StringIO
 
 def hexescape(char):
     """Escape char as RFC 2396 specifies"""
@@ -87,6 +89,37 @@ class urlopen_FileTests(unittest.TestCase):
         # comparison
         for line in self.returned_obj.__iter__():
             self.assertEqual(line, self.text)
+
+class urlopen_HttpTests(unittest.TestCase):
+    """Test urlopen() opening a fake http connection."""
+
+    def fakehttp(self, fakedata):
+        class FakeSocket(StringIO.StringIO):
+            def sendall(self, str): pass
+            def makefile(self, mode, name): return self
+            def read(self, amt=None):
+                if self.closed: return ''
+                return StringIO.StringIO.read(self, amt)
+            def readline(self, length=None):
+                if self.closed: return ''
+                return StringIO.StringIO.readline(self, length)
+        class FakeHTTPConnection(httplib.HTTPConnection):
+            def connect(self):
+                self.sock = FakeSocket(fakedata)
+        assert httplib.HTTP._connection_class == httplib.HTTPConnection
+        httplib.HTTP._connection_class = FakeHTTPConnection
+
+    def unfakehttp(self):
+        httplib.HTTP._connection_class = httplib.HTTPConnection
+
+    def test_read(self):
+        self.fakehttp('Hello!')
+        try:
+            fp = urllib.urlopen("http://python.org/")
+            self.assertEqual(fp.readline(), 'Hello!')
+            self.assertEqual(fp.readline(), '')
+        finally:
+            self.unfakehttp()
 
 class urlretrieve_FileTests(unittest.TestCase):
     """Test urllib.urlretrieve() on local files"""
@@ -410,6 +443,7 @@ class Pathname_Tests(unittest.TestCase):
 def test_main():
     test_support.run_unittest(
         urlopen_FileTests,
+        urlopen_HttpTests,
         urlretrieve_FileTests,
         QuotingTests,
         UnquotingTests,
